# visual-search-demo

./: .gitignore  README.md  embedder.py  gui.py  pipeline.py  product_card.py  products.json  pyproject.toml  service.py
.streamlit/: config.toml
frontend/: app.py  product_card.py
